fixing vertical spacing of topic pills

--- a/styles/global.css
+++ b/styles/global.css
@@ -564,4 +564,6 @@ tr:hover {
     border-radius: 2em;
     padding: 2px 10px;
     background-color: lightblue;
+    margin-bottom: 5px;
+    display: inline-block;
 }
